--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ try {
       </ErrorBoundary>
 
       <div class="home-content animate-stagger">
-        <ErrorBoundary>
+        {/* <ErrorBoundary>
           <div class="section-container">
             <FeaturedProjects projects={profile.projects} showTitle={true} />
           </div>
@@ -55,7 +55,7 @@ try {
           <div class="section-container">
             <SkillsList skills={profile.skills} />
           </div>
-        </ErrorBoundary>
+        </ErrorBoundary> */}
 
         <ErrorBoundary>
           <div class="cta-container animate-scale-in">
