--- a/src/components/common/Icons.astro
+++ b/src/components/common/Icons.astro
@@ -1,41 +1,79 @@
 ---
 interface Props {
-  name: 'astro' | 'vue' | 'nuxt';
+  name: 'vercel'|'astro' | 'vue' | 'nuxt' | 'react' | 'typescript' | 'javascript' | 'node' | 'python' | 'mongodb' | 'firebase' | 'supabase' | 'tailwind' | 'docker' | 'git' | 'github';
   size?: number;
   class?: string;
 }
 
-const { name, size = 32, class: className = '' } = Astro.props;
+const { name, size = 24, class: className = '' } = Astro.props;
 ---
 
 {(() => {
   switch (name) {
+    case 'vercel':
+        return(
+        <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 222"><path d="m128 0l128 221.705H0z"/></svg>
+        );
+
     case 'astro':
       return (
-        <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 32 32" class={className}>
-          <path fill="url(#vscodeIconsFileTypeLightAstro0)" d="M11.025 20.499c-.532 1.75-.154 4.184 1.105 5.331v-.042l.042-.112c.154-.741.756-1.203 1.526-1.175c.713.014 1.12.392 1.217 1.217c.042.308.042.616.056.938v.098c0 .7.196 1.371.588 1.959c.35.56.84.993 1.497 1.287l-.028-.056l-.028-.112c-.49-1.469-.14-2.49 1.147-3.358l.392-.266l.868-.573a4.25 4.25 0 0 0 1.791-3.037c.07-.532 0-1.05-.154-1.553l-.21.14c-1.945 1.035-4.17 1.4-6.325.98c-1.301-.197-2.56-.56-3.498-1.652z"/>
-          <path fill="#17191e" d="M4.925 20.191s3.736-1.82 7.486-1.82l2.84-8.759c.098-.42.406-.7.756-.7s.644.28.756.714l2.826 8.746c4.45 0 7.487 1.82 7.487 1.82L20.709 2.84c-.168-.518-.49-.84-.896-.84h-7.612c-.406 0-.7.322-.896.84z"/>
-          <defs>
-            <linearGradient id="vscodeIconsFileTypeLightAstro0" x1="8.19" x2="16.91" y1="23" y2="18.89" gradientTransform="translate(-.673 -2.198)scale(1.3993)" gradientUnits="userSpaceOnUse">
-              <stop offset="0" stop-color="#d83333"/>
-              <stop offset="1" stop-color="#f041ff"/>
-            </linearGradient>
-          </defs>
-        </svg>
-      );
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 366"><path d="M182.022 9.147c2.982 3.702 4.502 8.697 7.543 18.687L256 246.074a276.5 276.5 0 0 0-79.426-26.891L133.318 73.008a5.63 5.63 0 0 0-10.802.017L79.784 219.11A276.5 276.5 0 0 0 0 246.04L66.76 27.783c3.051-9.972 4.577-14.959 7.559-18.654a24.54 24.54 0 0 1 9.946-7.358C88.67 0 93.885 0 104.314 0h47.683c10.443 0 15.664 0 20.074 1.774a24.55 24.55 0 0 1 9.95 7.373"/><path fill="#ff5d01" d="M189.972 256.46c-10.952 9.364-32.812 15.751-57.992 15.751c-30.904 0-56.807-9.621-63.68-22.56c-2.458 7.415-3.009 15.903-3.009 21.324c0 0-1.619 26.623 16.898 45.14c0-9.615 7.795-17.41 17.41-17.41c16.48 0 16.46 14.378 16.446 26.043l-.001 1.041c0 17.705 10.82 32.883 26.21 39.28a35.7 35.7 0 0 1-3.588-15.647c0-16.886 9.913-23.173 21.435-30.48c9.167-5.814 19.353-12.274 26.372-25.232a47.6 47.6 0 0 0 5.742-22.735c0-5.06-.786-9.938-2.243-14.516"/></svg>  
+    );
     case 'vue':
       return (
-        <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 128 128" class={className}>
-          <path fill="none" d="m0 8.934l49.854.158l14.167 24.47l14.432-24.47L128 8.935l-63.834 110.14zm126.98.637l-24.36.02l-38.476 66.053L25.691 9.592L.942 9.572l63.211 107.89zm-25.149-.008l-22.745.168l-15.053 24.647L49.216 9.73l-22.794-.168l37.731 64.476zm-75.834-.17l23.002.009m-23.002-.01l23.002.01"/>
-          <path fill="#35495e" d="m25.997 9.393l23.002.009L64.035 34.36L79.018 9.404L102 9.398L64.15 75.053z"/>
-          <path fill="#41b883" d="m.91 9.569l25.067-.172l38.15 65.659L101.98 9.401l25.11.026l-62.966 108.06z"/>
-        </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 256 221"><path fill="#41b883" d="M204.8 0H256L128 220.8L0 0h97.92L128 51.2L157.44 0z"/><path fill="#41b883" d="m0 0l128 220.8L256 0h-51.2L128 132.48L50.56 0z"/><path fill="#35495e" d="M50.56 0L128 133.12L204.8 0h-47.36L128 51.2L97.92 0z"/></svg>
       );
     case 'nuxt':
       return (
-        <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 32 32" class={className}>
-          <path fill="#00e676" d="m30.27 23l-6.93-12a1.98 1.98 0 0 0-1.73-1a1.96 1.96 0 0 0-1.73 1l-2.27 3.93l-3.88-6.71a1.996 1.996 0 0 0-3.46 0L1.73 23a2 2 0 0 0 1.73 3h8.915a6 6 0 0 0 5.197-3.001L21.61 16l3.46 6h-2.31l-2.31 4h8.09a2 2 0 0 0 1.73-3m-17.896-1H6.93L12 13.22l3.3 5.71l-1.193 2.069A2 2 0 0 1 12.374 22"/>
-        </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 168"><path fill="#00dc82" d="M143.618 167.029h95.166c3.023 0 5.992-.771 8.61-2.237a16.96 16.96 0 0 0 6.302-6.115a16.3 16.3 0 0 0 2.304-8.352c0-2.932-.799-5.811-2.312-8.35L189.778 34.6a16.97 16.97 0 0 0-6.301-6.113a17.6 17.6 0 0 0-8.608-2.238c-3.023 0-5.991.772-8.609 2.238a16.96 16.96 0 0 0-6.3 6.113l-16.342 27.473l-31.95-53.724a17 17 0 0 0-6.304-6.112A17.64 17.64 0 0 0 96.754 0c-3.022 0-5.992.772-8.61 2.237a17 17 0 0 0-6.303 6.112L2.31 141.975a16.3 16.3 0 0 0-2.31 8.35c0 2.932.793 5.813 2.304 8.352a16.96 16.96 0 0 0 6.302 6.115a17.6 17.6 0 0 0 8.61 2.237h59.737c23.669 0 41.123-10.084 53.134-29.758l29.159-48.983l15.618-26.215l46.874 78.742h-62.492zm-67.64-26.24l-41.688-.01L96.782 35.796l31.181 52.492l-20.877 35.084c-7.976 12.765-17.037 17.416-31.107 17.416"/></svg>  
+    );
+    case 'react':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="M12 13.5a1.5 1.5 0 1 1 0-3a1.5 1.5 0 0 1 0 3m0-9c-4.55 0-8.51 2.55-10.34 6.29c-.66 1.36-.66 2.97 0 4.33C3.49 18.87 7.46 21.42 12 21.42s8.51-2.55 10.34-6.29c.66-1.36.66-2.97 0-4.33C20.51 7.05 16.55 4.5 12 4.5M12 3c5.32 0 10.01 2.86 12.25 7.15c.79 1.54.79 3.36 0 4.9C22.01 18.14 17.32 21 12 21s-10.01-2.86-12.25-7.15c-.79-1.54-.79-3.36 0-4.9C1.99 5.86 6.68 3 12 3"/></svg>
+      );
+    case 'typescript':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 256"><path fill="#3178c6" d="M20 0h216c11.046 0 20 8.954 20 20v216c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20V20C0 8.954 8.954 0 20 0"/><path fill="#fff" d="M150.518 200.475v27.62q6.738 3.453 15.938 5.179T185.849 235q9.934 0 18.874-1.899t15.678-6.257q6.738-4.359 10.669-11.394q3.93-7.033 3.93-17.391q0-7.51-2.246-13.163a30.8 30.8 0 0 0-6.479-10.055q-4.232-4.402-10.149-7.898t-13.347-6.602q-5.442-2.245-9.761-4.359t-7.342-4.316q-3.024-2.2-4.665-4.661t-1.641-5.567q0-2.848 1.468-5.135q1.469-2.288 4.147-3.927t6.565-2.547q3.887-.906 8.638-.906q3.456 0 7.299.518q3.844.517 7.732 1.597a54 54 0 0 1 7.558 2.719a41.7 41.7 0 0 1 6.781 3.797v-25.807q-6.306-2.417-13.778-3.582T198.633 107q-9.847 0-18.658 2.115q-8.811 2.114-15.506 6.602q-6.694 4.49-10.582 11.437Q150 134.102 150 143.769q0 12.342 7.127 21.06t21.638 14.759a292 292 0 0 1 10.625 4.575q4.924 2.244 8.509 4.66t5.658 5.265t2.073 6.474a9.9 9.9 0 0 1-1.296 4.963q-1.295 2.287-3.93 3.97t-6.565 2.632t-9.2.95q-8.983 0-17.794-3.151t-16.327-9.451m-46.036-68.733H140V109H41v22.742h35.345V233h28.137z"/></svg>
+    );
+    case 'javascript':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="M3 3h18v18H3zM12 15.5c0 1.25.5 2 1.5 2c.67 0 1.17-.25 1.42-.75l1.33.75c-.5 1-1.5 1.5-2.83 1.5c-1.67 0-3.17-1.17-3.17-3.5c0-2.25 1.5-3.5 3.17-3.5c1.33 0 2.33.5 2.83 1.5l-1.33.75c-.25-.5-.75-.75-1.42-.75c-1 0-1.5.75-1.5 2m-4.5 3.5h-1.8V12H4V9h4.5c1.17 0 2 .83 2 1.75v1.25c0 .95-.87 1.75-2 1.75H7.5z"/></svg>
+      );
+    case 'node':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="M12 1.85c-.27 0-.55.07-.78.2l-7.44 4.3c-.48.28-.78.8-.78 1.36v8.58c0 .56.3 1.08.78 1.36l1.95 1.12c.95.46 1.27.47 1.71.47c1.4 0 2.21-.85 2.21-2.33V8.44c0-.12-.1-.22-.22-.22H8.5c-.13 0-.23.1-.23.22v8.47c0 .66-.68 1.31-1.77.76L4.45 16.5a.26.26 0 0 1-.11-.21V7.71c0-.09.04-.17.11-.21l7.44-4.29c.06-.04.16-.04.22 0l7.44 4.29c.07.04.11.12.11.21v8.58c0 .08-.04.16-.11.21l-7.44 4.29c-.06.04-.16.04-.23 0L10 19.65c-.08-.03-.16-.04-.21-.01c-.53.3-.63.36-1.12.51c-.12.04-.31.11.07.32l2.48 1.47c.24.14.5.2.78.2s.54-.06.78-.2l7.44-4.29c.48-.28.78-.8.78-1.36V7.71c0-.56-.3-1.08-.78-1.36l-7.44-4.3c-.23-.13-.5-.2-.78-.2M14 8c-2.12 0-3.39.89-3.39 2.39c0 1.61 1.26 2.08 3.3 2.28c2.43.24 2.62.6 2.62 1.08c0 .83-.67 1.18-2.23 1.18c-1.98 0-2.4-.49-2.55-1.47a.226.226 0 0 0-.22-.18h-.96c-.12 0-.21.09-.21.22c0 1.24.68 2.74 3.94 2.74c2.35 0 3.7-.93 3.7-2.55c0-1.61-1.08-2.03-3.37-2.34c-2.31-.3-2.54-.46-2.54-1c0-.45.2-1.05 1.91-1.05c1.5 0 2.09.33 2.32 1.36c.02.1.11.17.21.17h.97c.05 0 .11-.02.15-.07c.04-.04.07-.1.05-.16C18.53 8.64 17.39 8 14 8"/></svg>
+      );
+    case 'python':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 255"><defs><linearGradient id="logosPython0" x1="12.959%" x2="79.639%" y1="12.039%" y2="78.201%"><stop offset="0%" stop-color="#387eb8"/><stop offset="100%" stop-color="#366994"/></linearGradient><linearGradient id="logosPython1" x1="19.128%" x2="90.742%" y1="20.579%" y2="88.429%"><stop offset="0%" stop-color="#ffe052"/><stop offset="100%" stop-color="#ffc331"/></linearGradient></defs><path fill="url(#logosPython0)" d="M126.916.072c-64.832 0-60.784 28.115-60.784 28.115l.072 29.128h61.868v8.745H41.631S.145 61.355.145 126.77c0 65.417 36.21 63.097 36.21 63.097h21.61v-30.356s-1.165-36.21 35.632-36.21h61.362s34.475.557 34.475-33.319V33.97S194.67.072 126.916.072M92.802 19.66a11.12 11.12 0 0 1 11.13 11.13a11.12 11.12 0 0 1-11.13 11.13a11.12 11.12 0 0 1-11.13-11.13a11.12 11.12 0 0 1 11.13-11.13"/><path fill="url(#logosPython1)" d="M128.757 254.126c64.832 0 60.784-28.115 60.784-28.115l-.072-29.127H127.6v-8.745h86.441s41.486 4.705 41.486-60.712c0-65.416-36.21-63.096-36.21-63.096h-21.61v30.355s1.165 36.21-35.632 36.21h-61.362s-34.475-.557-34.475 33.32v56.013s-5.235 33.897 62.518 33.897m34.114-19.586a11.12 11.12 0 0 1-11.13-11.13a11.12 11.12 0 0 1 11.13-11.131a11.12 11.12 0 0 1 11.13 11.13a11.12 11.12 0 0 1-11.13 11.13"/></svg>
+      );
+    case 'mongodb':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="M13.74 4.23c-.84-1-1.57-2-1.71-2.22H12c-.14.21-.87 1.22-1.71 2.22c-7.2 9.19 1.14 15.39 1.14 15.39l.07.05c.06.95.22 2.33.22 2.33h.62s.15-1.37.21-2.33l.07-.06s8.32-6.19 1.12-15.38M12 19.48a3.5 3.5 0 0 1-.5-3s.5 1 .5 2s.37 1.63.5 2c.13-.38.5-1 .5-2s.5-2 .5-2a3.5 3.5 0 0 1-.5 3"/></svg>
+      );
+    case 'firebase':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="m20 18.69l-7.3 4.05c-.5.26-1 .26-1.5 0L4 18.69L17.05 5.54l.35-.1c.3 0 .47.13.5.4zM9.35 5.74L4.8 13.29L6.7 1.34c.03-.27.2-.4.5-.4c.2 0 .33.06.4.25l2.15 3.95zM13.85 7L4.3 17.62l9.4-15.4c.1-.18.25-.27.45-.27s.35.09.45.27z"/></svg>
+      );
+    case 'supabase':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 263"><defs><linearGradient id="logosSupabaseIcon0" x1="20.862%" x2="63.426%" y1="20.687%" y2="44.071%"><stop offset="0%" stop-color="#249361"/><stop offset="100%" stop-color="#3ecf8e"/></linearGradient><linearGradient id="logosSupabaseIcon1" x1="1.991%" x2="21.403%" y1="-13.158%" y2="34.708%"><stop offset="0%"/><stop offset="100%" stop-opacity="0"/></linearGradient></defs><path fill="url(#logosSupabaseIcon0)" d="M149.602 258.579c-6.718 8.46-20.338 3.824-20.5-6.977l-2.367-157.984h106.229c19.24 0 29.971 22.223 18.007 37.292z"/><path fill="url(#logosSupabaseIcon1)" fill-opacity="0.2" d="M149.602 258.579c-6.718 8.46-20.338 3.824-20.5-6.977l-2.367-157.984h106.229c19.24 0 29.971 22.223 18.007 37.292z"/><path fill="#3ecf8e" d="M106.399 4.37c6.717-8.461 20.338-3.826 20.5 6.976l1.037 157.984H23.037c-19.241 0-29.973-22.223-18.008-37.292z"/></svg>  
+    );
+    case 'tailwind':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 154"><defs><linearGradient id="logosTailwindcssIcon0" x1="-2.778%" x2="100%" y1="32%" y2="67.556%"><stop offset="0%" stop-color="#2298bd"/><stop offset="100%" stop-color="#0ed7b5"/></linearGradient></defs><path fill="url(#logosTailwindcssIcon0)" d="M128 0Q76.8 0 64 51.2Q83.2 25.6 108.8 32c9.737 2.434 16.697 9.499 24.401 17.318C145.751 62.057 160.275 76.8 192 76.8q51.2 0 64-51.2q-19.2 25.6-44.8 19.2c-9.737-2.434-16.697-9.499-24.401-17.318C174.249 14.743 159.725 0 128 0M64 76.8q-51.2 0-64 51.2q19.2-25.6 44.8-19.2c9.737 2.434 16.697 9.499 24.401 17.318C81.751 138.857 96.275 153.6 128 153.6q51.2 0 64-51.2q-19.2 25.6-44.8 19.2c-9.737-2.434-16.697-9.499-24.401-17.318C110.249 91.543 95.725 76.8 64 76.8"/></svg>
+      );
+    case 'docker':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="M21.81 10.25c-.06-.04-.56-.42-1.61-.42c-.2 0-.43.02-.65.04c-.16-.93-.66-1.76-1.62-2.5l-.34-.24l-.22.35c-.27.45-.38.96-.35 1.46c.03.41.16.8.38 1.13c-.17.09-.42.23-.78.23H3.9l-.06.32c-.13.95.01 1.96.41 2.87c.33.8.86 1.46 1.57 1.96c.8.53 2.08.95 3.65.95c.69 0 1.4-.07 2.05-.19c.9-.17 1.75-.5 2.47-.94c.58-.38 1.1-.8 1.55-1.27l.17-.16h.24c.8 0 1.47-.18 1.99-.5c.16-.1.3-.19.4-.29l.15-.14l-.11-.17c-.21-.33-.37-.74-.47-1.17c-.03-.14-.05-.3-.06-.47c.44.11.83.25 1.2.38l.21.09l.23-.07c.58-.15.99-.45 1.25-.87c.25-.38.34-.8.29-1.18l-.04-.21zM4.72 11.97h1.5c.07 0 .13-.06.13-.13V10.6c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.12.13.12m1.97 0h1.5c.07 0 .13-.06.13-.13V10.6c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.12.13.12m1.97 0h1.5c.07 0 .13-.06.13-.13V10.6c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.12.13.12m1.97 0h1.5c.07 0 .13-.06.13-.13V10.6c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.12.13.12m-5.91-1.5h1.5c.07 0 .13-.06.13-.13V9.1c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.13.13.13m1.97 0h1.5c.07 0 .13-.06.13-.13V9.1c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.13.13.13m1.97 0h1.5c.07 0 .13-.06.13-.13V9.1c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.13.13.13m1.97 0h1.5c.07 0 .13-.06.13-.13V9.1c0-.07-.06-.13-.13-.13h-1.5c-.07 0-.13.06-.13.13v1.25c0 .06.06.13.13.13"/></svg>
+      );
+    case 'git':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="M2.6 10.59L8.38 4.8l1.69 1.7c-.24.85.15 1.78.93 2.23v5.54c-.6.34-1 .99-1 1.73a2 2 0 0 0 2 2a2 2 0 0 0 2-2c0-.74-.4-1.39-1-1.73V9.41l2.07 2.09c-.07.15-.07.32-.07.5a2 2 0 0 0 2 2a2 2 0 0 0 2-2a2 2 0 0 0-2-2c-.18 0-.35 0-.5.07L13.93 7.5a1.98 1.98 0 0 0-1.15-2.34c-.43-.16-.88-.2-1.28-.09L9.8 3.38l.79-.78c.78-.79 2.04-.79 2.82 0l7.99 7.99c.79.78.79 2.04 0 2.82l-7.99 7.99c-.78.79-2.04.79-2.82 0L2.6 13.41c-.79-.78-.79-2.04 0-2.82"/></svg>
+      );
+    case 'github':
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 24 24"><path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"/></svg>
       );
     default:
       return null;
