--- a/src/components/common/Icons.astro
+++ b/src/components/common/Icons.astro
@@ -11,14 +11,14 @@ const { name, size = 24, class: className = '' } = Astro.props;
 {(() => {
   switch (name) {
     case 'vercel':
-        return(
-        <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 222"><path d="m128 0l128 221.705H0z"/></svg>
-        );
+      return (
+      <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 256 222"><path d="m128 0l128 221.705H0z"/></svg>
+      );
 
     case 'astro':
       return (
       <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 256 366"><path d="M182.022 9.147c2.982 3.702 4.502 8.697 7.543 18.687L256 246.074a276.5 276.5 0 0 0-79.426-26.891L133.318 73.008a5.63 5.63 0 0 0-10.802.017L79.784 219.11A276.5 276.5 0 0 0 0 246.04L66.76 27.783c3.051-9.972 4.577-14.959 7.559-18.654a24.54 24.54 0 0 1 9.946-7.358C88.67 0 93.885 0 104.314 0h47.683c10.443 0 15.664 0 20.074 1.774a24.55 24.55 0 0 1 9.95 7.373"/><path fill="#ff5d01" d="M189.972 256.46c-10.952 9.364-32.812 15.751-57.992 15.751c-30.904 0-56.807-9.621-63.68-22.56c-2.458 7.415-3.009 15.903-3.009 21.324c0 0-1.619 26.623 16.898 45.14c0-9.615 7.795-17.41 17.41-17.41c16.48 0 16.46 14.378 16.446 26.043l-.001 1.041c0 17.705 10.82 32.883 26.21 39.28a35.7 35.7 0 0 1-3.588-15.647c0-16.886 9.913-23.173 21.435-30.48c9.167-5.814 19.353-12.274 26.372-25.232a47.6 47.6 0 0 0 5.742-22.735c0-5.06-.786-9.938-2.243-14.516"/></svg>  
-    );
+      );
     case 'vue':
       return (
       <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} class={className} viewBox="0 0 256 221"><path fill="#41b883" d="M204.8 0H256L128 220.8L0 0h97.92L128 51.2L157.44 0z"/><path fill="#41b883" d="m0 0l128 220.8L256 0h-51.2L128 132.48L50.56 0z"/><path fill="#35495e" d="M50.56 0L128 133.12L204.8 0h-47.36L128 51.2L97.92 0z"/></svg>
